--- a/job_concierge_agent_fixed/requirements.txt
+++ b/job_concierge_agent_fixed/requirements.txt
@@ -4,3 +4,9 @@ pandas
 numpy
 python-multipart
 gunicorn
+streamlit==1.32.0
+numpy==1.26.4
+pandas==2.1.4
+scikit-learn==1.3.2
+python-multipart
+gunicorn
